﻿w17 20.06.2014 13:46:02 +0400 - build 3956

1. Experimental. M#2684: Возможность смены кодировки путём перечитывания файла

drkns 19.06.2014 09:33:50 +0200 - build 3955

1. Потенциальная проблема в SyncedQueue и пара мелочей в Thread и MultiWaiter для улучшения читаемости.

drkns 19.06.2014 08:46:39 +0200 - build 3954

1. В 3842 погнулся запускатель в некоторых хитрых случаях.

zg 18.06.2014 10:56:30 +0200 - build 3953

1. после 3895 не работало alt-d в редакторе.

w17 16.06.2014 23:43:57 +0400 - build 3952

1. M#2708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"

shmuel 10.06.2014 11:38:11 +0200 - build 3951

1. Уточнение 3949.

shmuel 10.06.2014 00:45:54 +0200 - build 3950

1. При выгрузке плагина LuaMacro в результате exception ручная запись макросов запрещалась не сразу.

drkns 09.06.2014 22:12:24 +0200 - build 3949

1. Поддежка VS 14 (CTP), пока с варнингами.

shmuel 08.06.2014 22:47:12 +0200 - build 3948

1. Мелкий рефакторинг.

svs 07.06.2014 11:16:01 +0400 - build 3947

1. SQLite 3.8.5

shmuel 06.06.2014 21:35:19 +0200 - build 3946

1. Мелкий рефакторинг.

drkns 06.06.2014 19:00:44 +0200 - build 3945

1. far:ver -> far:about

shmuel 06.06.2014 16:21:30 +0200 - build 3944

1. Запуск Фара far /m запрещает только начальную загрузку макросов, в дальнейшем макросы могут быть
   загружены любым из известных способов.

w17 06.06.2014 12:37:17 +0400 - build 3943

1. ver -> far:ver

drkns 05.06.2014 20:51:49 +0200 - build 3942

1. С форума: ошибка создания автофильтра, если в имени файла присутствовали символы ,;

w17 05.06.2014 16:23:29 +0400 - build 3941

1. M#2250: Непоказ текста в 1251 внутри файла в UTF8
   Можно сменить кодировку при открытии файла, если в текущей файл не может быть открыт без потерь.

drkns 05.06.2014 01:06:34 +0200 - build 3940

1. Падение фара при удалении кастомного panel view mode, если он был установлен на пассивной панели.

2. Туда же добавлено конпкосочетание CtrlShiftEnter - установить режим на пассивной панели.
